<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_fragment"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    tools:context=".fragments.SettingsFragment">

    <TextView
        android:gravity="center"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_settings_title"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/dialog_lowValue"
        android:hint="@string/dialog_lowValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"/>

    <EditText
        android:id="@+id/dialog_highValue"
        android:hint="@string/dialog_highValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"/>

    <EditText
        android:id="@+id/dialog_timeValue"
        android:hint="@string/dialog_timeValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"/>

    <Button
        android:id="@+id/dialog_button"
        android:text="@string/button_send_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
