<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.marcus.mathflash.fragments.MathProblemFragment">


    <TextView
        android:id="@+id/count_down_text"
        android:layout_width="match_parent"
        android:layout_weight="3"
        android:layout_height="1dp"
        android:gravity="center_horizontal"
        android:text="@string/example_time_text"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/problem_text"
        android:layout_weight="9"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:gravity="center"
        android:text="@string/example_problem_text"
        android:textSize="90sp"
        android:textColor="@color/colorPrimary"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/problem_answer"
            android:layout_weight="2"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:hint="@string/problem_answer_hint"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textColor="@color/colorPrimary"
            android:inputType="number"/>

        <Button
            android:id="@+id/button_send_answer"
            android:text="@string/button_send_answer"
            android:textColor="@color/colorWhite"
            android:textSize="30sp"
            android:layout_weight="1"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            android:layout_margin="5dp"/>

    </LinearLayout>

</LinearLayout>
